public/css/bootstrap.css
/* ... */
@media print {
  .hidden-print {
    display: none !important;
  }
}
/*# sourceMappingURL=bootstrap.css.map */

.logo {
  font-family: 'Lobster', cursive;
  font-size: 64px;
  text-align: center;
  color: #b7293a;
  text-shadow: 2px 2px 0 #513a33;
}

.container-wrapper{
  margin-bottom: 60px;
}

